# tic-tac-jack

./: Server.hs  tic-tac-jack.cabal
app/: Main.hs
src/: Logic.hs
