name:                tic-tac-jack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SwiftsNamesake/tic-tac-jack#readme
license:             MIT
license-file:        LICENSE.md
author:              Jonatan H Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           (c) Jonatan H Sundqvist, 2017
category:            <category>
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     threepenny-gui
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable tic-tac-jack
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tic-tac-jack
  default-language:    Haskell2010

test-suite tic-tac-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tic-tac-jack
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SwiftsNamesake/tic-tac-jack
